tests/rascal/negative/type_errors/L1/13_expression_ES10_D4_94.ob
MODULE Test13;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               q := (1223 < (((+ 1223) MOD 0) MOD 0));
               p := r;
  (* error *)  x := ((0 - x) + ((1223 MOD 1) - 1223));
               p := (z < 1);
               p := r;
               q := p;
               q := q;
               q := (2 <= z);
               r := ((1223 >= z) OR (x # x));
               x := ((1223 MOD (y * (+ 1223))) + x)
END Test13.